styles.css
:root {
  --font-family: monospace;
  --font-size: 1rem;
  --font-size-sm: calc(var(--font-size)*0.7);
  --font-size-md: calc(var(--font-size)*0.9);
  --bar-height: calc(var(--font-size)*1.5);

  --body-min-width: 320px;
  --content-min-width: 750px;
  --content-width: 65vw;
  --content-max-width: 900px;
  --content-height: 95vh;
  --content-max-height: 1200px;
  --content-inner-max-width: 670px;
  --gutter-width: 2.5em;
  --scroll-block-width: 2.5em;
  --list-indent-width: 2em;
  --keybinding-display-width: 8em;

  --spacing-xsm: 0.35em;
  --spacing-sm: 0.7em;
  --spacing: 1em;
  --spacing-lg: 1.5em;

  --line-height-sm: calc(var(--line-height)/2);
  --line-height: 20px;
  --line-height-lg: calc(var(--line-height)*2);

  --z-index-content: 100;
  --z-index-gutter: 90;
  --z-index-fixed: 150;

  --color-background-light: rgba(255, 255, 255, 0.15);
  --color-line-number: rgba(255, 255, 255, 0.5);
  --color-default-text: #ffffff;
  --color-default-dark-text: #131313;
  --color-content-text: rgba(255, 255, 255, 0.9);
}

body.default-theme {
  --wallpaper: url('img/wallpaper.jpg');
  --color-window: rgba(18, 18, 16, 0.91);
  --color-primary: #fecfc7;
  --color-secondary: #445d86;
  --color-accent-text: #333;
  --color-secondary-text: #7493ff;
  --color-border: #f0d1ce;
}

body {
  margin: 0;
  min-width: var(--body-min-width);
  font-family: var(--font-family);
  font-size: var(--font-size);
  background-image: var(--wallpaper);
  background-color: var(--color-window);
  background-size: cover;
}

#page-wrapper {
  width: 100%;
  height: 100%;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#window {
  width: var(--content-width);
  min-width: var(--content-min-width);
  max-width: var(--content-max-width);
  height: var(--content-height);
  max-height: var(--content-max-height);
  border: 2px solid var(--color-border);
  display: flex;
  flex-direction: column;
  background-color: var(--color-window);
  box-shadow: 2px 2px 10px 1px #0000009c;
}

a, ol, ul, li, p, pre, td, th, h1, h2, h3, h4, h5 {
  line-height: var(--line-height);
  font-size: var(--font-size);
  margin: 0;
}

ol, ul {
  padding-left: var(--list-indent-width);
}

li::marker {
  color: var(--color-secondary-text);
}

p, pre, textarea, ol, ul, table {
  margin-top: var(--line-height);
  color: var(--color-content-text);
}

table {
  border-spacing: 0;
}

td, th {
  padding: 0 var(--spacing);
  text-align: left;
}

th {
  text-transform: uppercase;
  background-color: var(--color-secondary);
}

tr.even {
  background-color: var(--color-background-light);
}

blockquote, blockquote > p, h1, h2, h3, h4, h5, em, #content, .block, th, input {
  color: var(--color-default-text);
}

a {
  font-weight: bold;
  height: var(--line-height);
  display: inline-block;
  color: var(--color-primary);
}

a:hover, a:focus {
  background-color: var(--color-primary);
  color: var(--color-default-dark-text);
  font-weight: normal;
}

a > img {
  max-width: 100%;
}

h1, h2, h3, h4, h5 {
  margin-top: var(--line-height-lg);
  text-transform: uppercase;
}

h1 {
  line-height: var(--line-height-lg);
  font-size: var(--line-height);
}

h1:first-of-type, blockquote > p {
  margin-top: 0;
}

h1 + * {
  margin-top: var(--line-height);
}

h1::before, h2::before, h3::before, h4::before, h5::before,
h1::after, h2::after, h3::after, h4::after, h5::after {
  color: var(--color-secondary-text);
}

h3::before {
  content: '[ ';
}

h3::after {
  content: ' ]';
}

h2::before {
  content: '[[ ';
}

h2::after {
  content: ' ]]';
}

h1::before {
  content: '═════ ';
}

h1::after {
  content: ' ═════';
}

input {
	background-color: transparent;
	border: none;
	padding: 0;
	margin: 0;
	margin-left: var(--spacing-sm);
	height: var(--bar-height);
  font-size: var(--font-size);
  font-family: var(--font-family);
}

input[type=checkbox] {
  -webkit-appearance: none;
  -moz-appearance:    none;
  appearance:         none;
  display: none; /* i dont feel like fixing this shit */
}

button {
  border: none;
  font-family: var(--font-family);
  font-size: var(--font-size);
}

pre {
  display: flex;
}

img, video {
  max-width: 100%;
  object-fit: cover;
  height: auto;
  align-self: flex-start;
}

img + img {
	margin-top: var(--line-height);
}

figure {
  margin: 0;
  display: flex;
  flex-direction: column;
}

figcaption {
  line-height: var(--line-height);
  text-align: center;
  font-size: var(--font-size-90);
}

svg {
  height: var(--line-height);
  width: var(--line-height);
  fill: var(--color-default-text);
  vertical-align: middle;
}

blockquote {
  margin: 0;
  margin-top: var(--line-height);
  font-style: italic;
  font-weight: bold;
  display: inline-flex;
}

blockquote::before {
  content: '--- ';
  color: var(--color-secondary-text);
  margin-right: var(--spacing-sm);
  display: inline-flex;
  align-items: center;
  min-width: 2em;
}

code > pre {
  padding-left: var(--line-height);
}

.bar {
  display: inline-flex;
  align-items: center;
  height: var(--bar-height);
  width: 100%;
  background-color: var(--color-background-light);
}

.tab {
  background-color: transparent;
  padding: 0 var(--spacing-sm);
  display: inline-flex;
  justify-content: center;
  align-items: center;
  height: var(--bar-height);
  font-size: var(--font-size);
  margin: 0;
  color: var(--color-default-text);
}

.tab > span:first-of-type {
  margin-right: 0.5em;
}

.tab-active {
  background-color: var(--color-primary);
}

.tab-active, .block-primary, .block-secondary, th {
  color: var(--color-default-dark-text);
}

main {
  width: 100%;
  height: 100%;
  flex: 1;
  display: inline-flex;
  overflow-y: scroll;
  padding-top: var(--line-height-sm);
  box-sizing: border-box;
  position: relative;
  scrollbar-width: none; /* hides the scrollbar in Firefox */
}

main::-webkit-scrollbar {
  display: none; /* webkit browsers implementation */
}

#gutter {
  width: var(--gutter-width);
  min-width: var(--gutter-width);
  height: auto;
  background-color: transparent;
  display: block;
  z-index: var(--z-index-gutter);
}

.line-number {
  color: var(--color-line-number);
  text-align: right;
  padding: 0;
  margin: 0;
  font-size: var(--font-size);
  line-height: var(--line-height);
}

#content {
  flex: 1;
  height: auto;
  padding: 0 var(--line-height);
  font-size: var(--font-size);
  z-index: var(--z-index-content);
  max-width: var(--content-inner-max-width);
  box-sizing: border-box;
}

#content > *:first-child {
  margin-top: 0;
}

#content > *:last-child {
  margin-bottom: var(--line-height);
}

footer {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
}

#commands {
  background-color: var(--color-window);
}

.block {
  height: 100%;
  padding: 0 var(--spacing-sm);
  display: inline-flex;
  align-items: center;
}

#scroll {
  width: var(--scroll-block-width);
}

#keybinding-display {
  width: var(--keybinding-display-width);
  margin: 0;
}

.expand {
  flex: 1;
}

.align-right {
  justify-content: flex-end;
}

.row {
  display: flex;
  flex-direction: row;
  width: 100%;
  margin-top: var(--line-height);
  flex-wrap: wrap;
  row-gap: var(--line-height);
}

.row > a {
  margin-right: var(--line-height-sm);
}

.block-primary {
  background-color: var(--color-primary);
}

.block-secondary {
  background-color: var(--color-secondary);
}

pre[data-type="@ascii"] {
  margin-top: 0;
}

pre[data-type="@ascii"] > pre {
  color: var(--color-primary);
  display: inline-flex; /* Keep the width the same as the width of the text */
  margin-top: 0;
}

pre[data-type="@ascii"] > h1 {
  display: none;
}

@media
only screen and (max-width: 780px),
only screen and (-webkit-min-device-pixel-ratio: 2)      and (min-width: 320px),
only screen and (   min--moz-device-pixel-ratio: 2)      and (min-width: 320px),
only screen and (     -o-min-device-pixel-ratio: 2/1)    and (min-width: 320px),
only screen and (        min-device-pixel-ratio: 2)      and (min-width: 320px),
only screen and (                min-resolution: 192dpi) and (min-width: 320px),
only screen and (                min-resolution: 2dppx)  and (min-width: 320px) {
  :root {
    --content-height: 100%;
    --content-max-height: unset;
    --content-width: 100%;
    --content-min-width: unset;
    --content-max-width: unset;
    --line-height: 20px;
    --content-inner-max-width: 100%;
    --gutter-width: 2em;
    --list-indent-width: var(--line-height);
  }

  #window {
    border: 0;
    flex: 1;
  }

  header {
    position: fixed;
    top: 0;
    left: 0;
    z-index: var(--z-index-fixed);
  }

  main {
    padding: 0;
    padding-top: calc(var(--bar-height) + var(--spacing-sm));
    padding-bottom: calc(var(--bar-height) * 2);
  }

  #content {
    padding: 0 var(--spacing);
  }

  blockquote::before {
    content: '';
    min-width: 0;
    border-left: 2px solid var(--color-secondary-text);
  }

  footer {
    position: fixed;
    bottom: 0px;
    left: 0px;
    z-index: var(--z-index-fixed);
  }
}

@media screen and (max-width: 780px),
only screen and (-webkit-min-device-pixel-ratio: 2)      and (max-width: 800px),
only screen and (   min--moz-device-pixel-ratio: 2)      and (max-width: 800px),
only screen and (     -o-min-device-pixel-ratio: 2/1)    and (max-width: 800px),
only screen and (        min-device-pixel-ratio: 2)      and (max-width: 800px),
only screen and (                min-resolution: 192dpi) and (max-width: 800px),
only screen and (                min-resolution: 2dppx)  and (max-width: 800px) {
  pre[data-type="@ascii"] > pre {
    font-size: var(--font-size-sm);
  }

  .tab > span:last-of-type {
    display: none;
  }

  img, video {
    width: 100%;
    object-fit: cover;
  }
}

@media
only screen and (max-width: 500px),
only screen and (-webkit-min-device-pixel-ratio: 2)      and (max-width: 700px),
only screen and (   min--moz-device-pixel-ratio: 2)      and (max-width: 700px),
only screen and (     -o-min-device-pixel-ratio: 2/1)    and (max-width: 700px),
only screen and (        min-device-pixel-ratio: 2)      and (max-width: 700px),
only screen and (                min-resolution: 192dpi) and (max-width: 700px),
only screen and (                min-resolution: 2dppx)  and (max-width: 700px) {
  #content {
    padding: 0 var(--spacing-sm);
  }

  h1 {
    text-align: center;
    width: 100%;
  }

  #gutter, #info,
  pre[data-type="@ascii"] > pre,
  .tab > span:first-of-type, .tab > span:last-of-type {
    display: none;
  }

  #file {
    flex: 1;
  }

  pre[data-type="@ascii"] > h1 {
    display: block;
  }
}

